# tutor

./: README.md
back-end/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
back-end/docs/: DEPLOYMENT.md  DEVELOPER_SETUP.md  file_structure.md
back-end/docs/agents/: API_DOCUMENTATION.md
back-end/docs/agents/json/: 1.json  2.json  3.json
back-end/docs/agents/phases/: implementation_workflow.md  phase_1_completion.md  phase_2_completion.md  phase_3_completion.md  phase_4_completion.md  phase_5_completion.md
back-end/src/agents/: server.py
back-end/src/agents/core/: __init__.py  code_chunker.py  code_generator.py  line_explainer.py  orchestrator.py
back-end/src/agents/models/: __init__.py  schemas.py
back-end/src/tests/: conftest.py
back-end/src/tests/agents/: response_ff2c0292-7975-439e-a6d1-af827389f6a6.json  test_orchestrator.py  test_request.py
back-end/src/tests/integration/: test_api_endpoints.py
front-end/: package-lock.json  package.json
front-end/docs/: file_structure.md
